# PRISM

./: .dockerignore  .gitignore  README.md
.github/: FUNDING.yml
config/: repos.yaml
prism-analyze/: .gitignore  README.md  pyproject.toml
prism-analyze/docs/: CATALOG_FORMAT.md  METHODS.md  PREPARING_YOUR_DATA.md
prism-analyze/examples/: ai_jobs_demo.py  nvidia_stock_demo.py
prism-analyze/prism_analyze/: __init__.py  config.py  core.py
prism-analyze/prism_analyze/analysis/: breaks.py  correction.py  did.py  its.py  pipeline.py  preprocessor.py
prism-analyze/prism_analyze/catalog/: ai_inflections.yaml  categories.yaml  loader.py  schema.py
prism-analyze/prism_analyze/data/: schema.py  validator.py
prism-analyze/prism_analyze/report/: exporter.py  models.py  visualizer.py
prism-analyze/tests/: conftest.py  test_breaks.py  test_catalog.py  test_did.py  test_its.py  test_pipeline.py  test_preprocessor.py
prism-collect/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
prism-collect/config/: settings.py
prism-collect/prism/: github_client.py
prism-collect/prism/collectors/: pulls.py  repo_meta.py
prism-collect/tests/: test_schemas.py
scripts/: csv_to_repos_yaml.py  import_csv_prs.py
sql/: 001_init.sql
sql/queries/: pr_throughput.sql
src/prism/: __init__.py  cli.py  db.py  models.py  schemas.py  settings.py
src/prism/collectors/: __init__.py  base.py
tests/: conftest.py  test_cli.py  test_db.py  test_github_client.py  test_parsers.py
